feat: added new module for mission and restored dag/hash & update readme, architecture and swagger
